<resources>
    <string name="app_name">NBAPlus</string>

    <string name="firstTab">精选</string>
    <string name="secondTab">推荐</string>
    <string name="thirdTab">更多</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="exit_prompt">再按一次退出</string>
    <string name="load_success">加载成功</string>
    <string name="load_more">加载更多</string>
    <string name="load_fail">加载失败</string>

    <!--drawer-->
    <string name="news">新闻</string>
    <string name="main"></string>
    <string name="blog">博客</string>
    <string name="sort">排名</string>
    <string name="statistics">数据</string>
    <string name="teamsort">球队排行</string>
    <string name="likes">收藏</string>
    <string name="about">关于</string>
    <string name="gameDate">赛程</string>
    <string name="advice">反馈</string>
    <string name="setting">设置</string>

    <string name="team">球队</string>
    <string name="player">球员</string>
    <string name="daily">每日</string>
    <string name="everage">场均</string>


    <string name="about_app_name_with_introduce">NBAPlus - 最专注的NBA信息平台</string>
    <string name="about_introduce">介绍</string>
    <string name="introduce">NBAPlus 是一款专注于NBA新闻和动态的平台 \n\n更全面、更方便、更快捷是的获取NBA资讯\n\n所有资讯均来自互联网，如有侵权，请告知！</string>
    <string name="contact_to_me">联系</string>
    <string name="email">silencedutchman@foxmail.com</string>
    <string name="notices">开源协议</string>
    <string name="open_source">开放源代码许可</string>


    <!--preferences -->
    <string name="system_setting">系统设置</string>
    <string name="other_setting">其他设置</string>
    <string name="pre_loadimage_key">LOADIMAGE</string>
    <string name="news_detile_load_image">正文中加载图片</string>
    <string name="load_current">当前为自动加载正文中的图片（默认）</string>
    <string name="noload_current">当前为不加载正文中的图片</string>


    <string name="pre_fontsize_key">ACTILEFONTSIZE</string>
    <string name="actile_font_size">正文字号</string>
    <string name="big_font">大号字体</string>
    <string name="medium_font">中号字体</string>
    <string name="small_font">小号字体</string>
    <string name="clear_cache">清除缓存</string>
    <string name="version_update">检查更新</string>

    <string name="data_cleared">已清除缓存数据</string>
    <string name="my_team">我的主队</string>

</resources>
