<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/scrollview_drawer"

    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignBottom="@+id/main_left_layout_info"
                android:src="@mipmap/main_left_header_bg"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true" />
            <LinearLayout
                android:id="@+id/main_left_layout_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="32dp"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/main_left_img_avatar"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    app:border_width="1dp"
                    app:border_color="@color/white"/>

                <TextView
                    android:id="@+id/main_left_tv_login_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:text="@string/my_team" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout

            style="@style/RippleTextView"
            android:layout_marginTop="@dimen/view_margingtop"
            android:id="@+id/first"
            >
            <ImageView
                style="@style/DrawerIcon"
                android:src="@drawable/drawer_icon_news" />
            <TextView
                style="@style/DrawerTextView"
                android:text="@string/news" />
        </RelativeLayout>
        <RelativeLayout

            style="@style/RippleTextView"
            android:id="@+id/second"
            >
            <ImageView
                style="@style/DrawerIcon"
                android:src="@drawable/drawer_icon_blog" />
            <TextView
                style="@style/DrawerTextView"
                android:text="@string/blog" />
        </RelativeLayout>

        <RelativeLayout

            style="@style/RippleTextView"
            android:id="@+id/third"
            android:visibility="gone"
            >
            <ImageView
                style="@style/DrawerIcon"
                android:src="@drawable/drawer_icon_gamedate" />
            <TextView
                style="@style/DrawerTextView"
                android:text="@string/gameDate" />
        </RelativeLayout>
        <RelativeLayout

            style="@style/RippleTextView"
            android:id="@+id/fourth"
            android:visibility="gone"
            >
            <ImageView
                style="@style/DrawerIcon"
                android:src="@drawable/drawer_icon_sort" />
            <TextView
                style="@style/DrawerTextView"
                android:text="@string/sort" />
        </RelativeLayout>
        <RelativeLayout
            style="@style/RippleTextView"
            android:id="@+id/fivth"
            android:visibility="gone"
            >
            <ImageView
                style="@style/DrawerIcon"
                android:src="@drawable/drawer_icon_summary" />
            <TextView
                style="@style/DrawerTextView"
                android:text="@string/data" />
        </RelativeLayout>


        <View
            android:id="@+id/divier"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_divider_line"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="@dimen/view_margingtop"
            android:background="@color/grey300"/>
        <RelativeLayout

            style="@style/RippleTextView"
            android:id="@+id/sixth"
            >
            <ImageView
                style="@style/DrawerIcon"
                android:src="@drawable/drawer_icon_about" />
            <TextView
                style="@style/DrawerTextView"
                android:text="@string/about" />
        </RelativeLayout>
        <RelativeLayout
            style="@style/RippleTextView"
            android:id="@+id/seventh"
           >
           <ImageView
               style="@style/DrawerIcon"
               android:src="@drawable/drawer_icon_setting" />
           <TextView
               style="@style/DrawerTextView"
               android:text="@string/action_settings" />
        </RelativeLayout>

    </LinearLayout>
</ScrollView>
