<com.me.silencedut.nbaplus.ui.wigdets.SwipeBackLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipBackLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <com.me.silencedut.nbaplus.ui.wigdets.RevealBackgroundView
            android:id="@+id/revealBackgroundView"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <android.support.design.widget.CoordinatorLayout
            android:id="@+id/coordinatorLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.AppBarLayout
                android:id="@+id/appbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/appbar_layout_height"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                <android.support.design.widget.CollapsingToolbarLayout
                    android:id="@+id/collapsing_toolbar_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:contentScrim="?attr/colorPrimary"
                    app:expandedTitleMarginStart="5dp"
                    app:expandedTitleTextAppearance="@style/AboutToolbarTextStyle"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/appbar_layout_height"
                        android:background="@color/colorPrimary"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/titleImage"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:scaleType="fitXY"
                            android:src="@mipmap/liantu"
                            app:layout_collapseMode="parallax"
                            app:layout_collapseParallaxMultiplier="0.7" />
                        <TextView
                            android:id="@+id/tv_version"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_8dp"
                            android:textColor="@color/icons"
                            android:textSize="14sp"
                            />
                    </LinearLayout>

                    <android.support.v7.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        app:layout_collapseMode="pin"/>

                </android.support.design.widget.CollapsingToolbarLayout>

            </android.support.design.widget.AppBarLayout>

            <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                android:background="@color/grey200">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/margin_8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:text="@string/about_introduce"
                        android:textColor="@color/colorAccent"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_card"
                        android:padding="16dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:autoLink="web"
                            android:text="@string/introduce"
                            android:textColor="@color/secondary_text"
                            android:textIsSelectable="true"
                            android:textSize="14sp"/>

                    </RelativeLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:layout_marginTop="12dp"
                        android:text="@string/contact_to_me"
                        android:textColor="@color/colorAccent"/>



                    <TextView
                         android:id="@+id/email"
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/navigation_drawer_item_height"
                         android:drawableLeft="@mipmap/drawer_icon_advice"
                         android:background="@drawable/bg_card"
                         android:drawablePadding="@dimen/margin_8dp"
                         android:paddingLeft="@dimen/margin_8dp"
                         android:gravity="center_vertical"
                         android:text="@string/email"
                         android:textColor="@color/secondary_text"
                         android:textSize="16sp"
                      />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:layout_marginTop="12dp"
                        android:text="@string/notices"
                        android:textColor="@color/colorAccent"/>


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/navigation_drawer_item_height"
                        android:drawableLeft="@mipmap/notice"
                        android:background="@drawable/bg_card"
                        android:drawablePadding="@dimen/margin_8dp"
                        android:paddingLeft="@dimen/margin_8dp"
                        android:gravity="center_vertical"
                        android:text="@string/open_source"
                        android:onClick="onMultipleClick"
                        android:textColor="@color/colorAccent"
                        android:textSize="14sp"
                        />
                </LinearLayout>

            </android.support.v4.widget.NestedScrollView>

        </android.support.design.widget.CoordinatorLayout>
    </RelativeLayout>
</com.me.silencedut.nbaplus.ui.wigdets.SwipeBackLayout>